# multi-modal-demo

./: .env.example  .gitignore  README.md  app.py  setup.cfg  setup.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: README.md  python-app.yml
.gradio/cached_examples/44/: log.csv
.gradio/cached_examples/62/: log.csv
notebooks/: 0_creating_multimodal.ipynb  Multimodal Search with LanceDB, Groq, and HuggingFace.ipynb
src/: __init__.py  constants.py  lancedb_handler.py  utils.py
src/inference/: bge_small.py  llama32.py  llama32_vision.py  vit_base.py
src/lancedb/: retriever.py
tests/: test_utils.py
