[metadata]
name = src
description = Source code of the src.
long_description = file: README.md
url = https://github.com/pedrojrv/src
classifiers =
    Programming Language :: Python :: 3,
    Operating System :: OS Independent,
    Development Status :: 3 - Alpha
keywords = [ai, ml]
project_urls =
    Documentation = https://github.com/pedrojrv/src
version = 0.0.1

[options]
python_requires = >= 3.8, < 3.13
include_package_data = True
packages = find:
install_requires =
    lancedb
    torch
    transformers
    huggingface_hub
    python-dotenv
    accelerate
    groq
    Pillow

[options.packages.find]
include = src*

[options.extras_require]
dev =
    pip-tools >= 6
    pre-commit >= 2.14.0
    pytest >= 5.0
    pytest-env
    pytest-cov >= 2.7
    pytest-html
    pytest-asyncio
    pytest-timeout
    pytest-tornasync
    pyright
    typing-extensions
    flake8
    flake8-docstrings
    httpx
    vulture >= 1.0
    bandit >= 1.6
    safety >= 1.8
    isort >= 5.3
    flake8-bugbear >= 19.8
    black >= 18.3a0  # Corrected version specification
    mypy >= 0.730.0
    ipython >= 7.7
    pytest-mock >= 1.10
    pep8-naming >= 0.8.2
    portray >= 1.3.0
    cruft >= 2.2
    notebook

[flake8]
max_line_length = 120
ignore = E402, E226, W503, W605, D104
exclude =
    venv
    .eggs
    build
    experiment/

# pydocstyle configuration for flake8-docstrings
docstring-convention = google
docstring-match-dir = src
per-file-ignores =
    tests/*: D100, D205, D212, D415
    __init__.py: F401

[pycodestyle]
max-line-length = 120
